# csc3380-fall-2023-lecture9

./: CMakeLists.txt  README.md
code/: catch.hpp  fibonacci.cpp  fibonacci_logn.cpp  generic_power.cpp  multiply.cpp  power.cpp
results/: fibonacci_benchmark.xlsx
